name:                hfractal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/remedan/hfractal#readme
license:             GPL-3
license-file:        LICENSE
author:              Vojtěch Balák
maintainer:          vojtech@balak.me
copyright:           2021 Vojtěch Balák
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hfractal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , bytestring
                     , colour
